Add unit tests for GradeAnalyzer.calculateAverage